# comfyui-immich

./: .env.example  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
immich_nodes/: save_to_immich.py
nodes/: save_to_immich.py
tests/: test_save_to_immich.py
